--- a/lab1/forza/Sudoku/README
+++ b/lab1/forza/Sudoku/README
@@ -1,3 +1,6 @@
-A backtracking sudoku solver, four algorithms are shown.
+./sudoku运行程序（不需要在后面添加任何参数）
+然后输入需要测试的文件名（test1，test50，test100，test1000），按回车输入下一个文件。
+输入quit结束输入。
 
-test cases are from http://people.csse.uwa.edu.au/gordon/sudokumin.php
+len是输入数独问题的个数
+a[100000][81]是储存数独数据的二维数组
